# SemanticDB3.1

./: CMakeLists.txt  README.md  mac-build-instructions.txt  ubuntu-build-instructions.txt
src/: SDB3_header.h  main.cpp  test_main.cpp  test_parser_main.cpp
src/CompoundConstant/: CompoundConstant.cpp  CompoundConstant.h  ConstantFloat.cpp  ConstantFloat.h  ConstantInteger.cpp  ConstantInteger.h  ConstantOperator.cpp  ConstantOperator.h  ConstantString.cpp  ConstantString.h
src/Context/: BoundFunction.cpp  BoundFunction.h  ContextList.cpp  ContextList.h  Frame.cpp  Frame.h  NewContext.cpp  NewContext.h
src/DocsGenerator/: DocsGenerator.cpp  DocsGenerator.h
src/Function/: NaturalSort.h  Timer.cpp  Timer.h  misc.cpp  misc.h  split_join.cpp  split_join.h
src/FunctionOperatorMap/: FunctionOperatorMap.cpp  FunctionOperatorMap.h
src/KetMap/: KetMap.cpp  KetMap.h
src/LearnRule/: LearnRule.cpp  LearnRule.h
src/Operator/: BaseOperator.h  BracketOperator.cpp  BracketOperator.h  CompoundOperator.cpp  CompoundOperator.h  EmptyOperator.h  FunctionOperator.cpp  FunctionOperator.h  InfixOperator.cpp  InfixOperator.h  NumericOperator.cpp  NumericOperator.h  OperatorSequence.cpp  OperatorSequence.h  PoweredOperator.cpp  PoweredOperator.h  SimpleOperator.cpp  SimpleOperator.h
src/OperatorLibrary/: FunctionOperatorLibrary.cpp  FunctionOperatorLibrary.h  OperatorLibrary.cpp  OperatorLibrary.h  SigmoidLibrary.cpp  SigmoidLibrary.h
src/OperatorUsageMap/: OperatorUsageMap.cpp  OperatorUsageMap.h
src/Parser/: Driver.cpp  Driver.h  Parser.yy  Scanner.h  Scanner.ll
src/Sequence/: BaseSequence.h  ForStatement.cpp  ForStatement.h  IfElseStatement.cpp  IfElseStatement.h  Ket.cpp  Ket.h  LearnRule.cpp  LearnRule.h  MultiLearnRule.cpp  MultiLearnRule.h  MultiSelfKet.cpp  MultiSelfKet.h  OperatorWithSequence.cpp  OperatorWithSequence.h  SelfKet.cpp  SelfKet.h  Sequence.cpp  Sequence.h  Superposition.cpp  Superposition.h  SuperpositionIter.cpp  SuperpositionIter.h  WhileStatement.cpp  WhileStatement.h
src/tclap/: Arg.h  CmdLine.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  XorHandler.h
sw-examples/: Fibonacci.sw3  bots.sw3  bottles-of-beer.sw3  early-us-presidents.sw3  expand-srange.sw3  explore-scompress.sw3  family-relations.sw3  family-tree.sw3  filter-example.sw3  for-test.sw3  fred-sam-friends.sw3  identify-and-predict-integer-sequence-fragments.sw3  if-test.sw3  numbers-to-words.sw3  plural.sw3  prolog-monkey-solver.sw3  prolog-monkey.sw3  qm-experiment.sw3  scompress-wikipedia.sw3  simple-chemistry.sw3  smarter-prolog-monkey-solver.sw3  stream.sw3  temperature-conversion.sw3  test-bound-functions.sw3  test-for.sw3  test-if.sw3  walking-ant-v2.sw3  walking-ant.sw3  while-test.sw3
